@@ -5,7 +5,7 @@ import time
 import datetime
 import twitter as TwitterLibrary
 
-class TwitterProvider(ActivityProvider):
+class TwitterUserProvider(ActivityProvider):
     """
     Provider for accessing Twitter status updates for one user.
     """
@@ -16,13 +16,14 @@ class TwitterProvider(ActivityProvider):
         print 'Attempting to obtain Twitter items'
         api = TwitterLibrary.Api()
         username = settings.TWITTER_USERNAME
+        print ' Username: %s' % username
         statuses = api.GetUserTimeline(username, count=50)
 
         for status in statuses:
             title = status.text
             guid = "twitter:%s" % status.id
             link = "http://twitter.com/%s/statuses/%s" % (status.user.screen_name, status.id)
-            author = status.user.name
+            author = status.user.name or ''
                 
             date_published = datetime.datetime.fromtimestamp(status.created_at_in_seconds)
                  
@@ -42,6 +43,48 @@ class TwitterProvider(ActivityProvider):
 
     def link(self):
         return 'http://twitter.com/%s' % settings.TWITTER_USERNAME
+
+    def sourceid(self):
+        return 'twitter'
+
+
+class TwitterSearchProvider(ActivityProvider):
+    """
+    Provider for accessing Twitter status updates from a search query.
+    """
+
+    def get_activity(self):
+        item_list = []
+
+        print 'Attempting to obtain Twitter items'
+        api = TwitterLibrary.Api()
+        query = settings.TWITTER_SEARCHTERM
+        print ' Search term: %s' % query
+        statuses = api.GetSearch(term=query, per_page=50)
+
+        for status in statuses:
+            title = status.text
+            guid = "twitter:%s" % status.id
+            link = "http://twitter.com/%s/statuses/%s" % (status.user.screen_name, status.id)
+            author = status.user.name or ''
+            username = status.user.screen_name
+
+            date_published = datetime.datetime.fromtimestamp(status.created_at_in_seconds)
+
+            activity_info = ActivityInfo(title=title, link=link, pub_date=date_published, guid=guid, username=username, author=author)
+            item_list.append(activity_info)
+
+        return item_list
+
+
+    def name(self):
+        return 'Twitter'
+
+    def prefix(self):
+        return ''
+
+    def link(self):
+        return 'http://twitter.com/search?q=%s' % settings.TWITTER_SEARCHTERM
 
     def sourceid(self):
         return 'twitter'
